# cellular-automata

./: LICENSE  README.md  ca.cabal
app/: Main.hs
src/: Automata.hs  Comonad.hs  Universe.hs
