name:                ca
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sdemos/ca#readme
license:             BSD3
license-file:        LICENSE
author:              Stephen Demos
maintainer:          stphndemos@gmail.com
copyright:           2016 Stephen Demos
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Automata
                     , Comonad
                     , Univserse
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable ca
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ca
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sdemos/ca
